fix: remove scrollbar-gutter to remove reserved gutter space

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -202,7 +202,6 @@
   html {
     background-color: var(--background);
     overflow-y: scroll;
-    scrollbar-gutter: stable;
   }
   body {
     @apply bg-background text-foreground;
